# selenium-package

./: .gitignore  pyproject.toml
app/src/interfaces/: __init__.py  base_action.py  base_executor.py
app/tests/interfaces/: test_base_action.py  test_base_executor.py
docs/: genindex.html  index.html  objects.inv  pre-built-objects.html  searchindex.js
docs/.doctrees/: environment.pickle  index.doctree  interfaces.doctree  introduction.doctree  pre-built-objects.doctree  usage.doctree
selenium_package/: __init__.py  messages.py
selenium_package/interfaces/: base_action.py  base_executor.py
sphinx-docs/.doctrees/: environment.pickle  index.doctree
sphinx-docs/doctrees/: environment.pickle
sphinx-docs/source/: pre-built-objects.rst
src/selenium_package/actions/: click_on_element.py  click_on_the_screen.py  close_all_tabs_except_that_contains_title.py  close_all_tabs_except_that_has_title.py  go_back_to_the_previous_page.py  go_to_tab_that_contains_title.py  go_to_tab_that_contains_url.py  go_to_tab_that_has_title.py  insert_text.py  redirect_to_page.py
src/selenium_package/interfaces/: base_action.py  base_executor.py
tests/actions/: test_click_on_element.py  test_click_on_the_screen.py  test_go_to_tab_that_contains_title.py  test_go_to_tab_that_has_title.py  test_insert_text.py  test_redirect_to_page.py
tests/interfaces/: test_base_action.py  test_base_executor.py
